feat: 🎨 Improve dark mode and add custom hr

--- a/src/_includes/partials/reference-item.njk
+++ b/src/_includes/partials/reference-item.njk
@@ -1,6 +1,6 @@
-<li class="reference-item" data-props="noMeasure" >
+<li class="reference-item" data-props="noMeasure">
     <a
-        data-link rel="noopener nofollow noreferrer" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
+        data-button="link" rel="noopener nofollow noreferrer" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
         <span>
             <b>{{ reference.cite if reference.cite }}</b>.
             <span>
