--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -2,7 +2,7 @@
     <article itemscope itemtype="http://schema.org/Article" class="story-card" data-props="noMeasure">
         <header>
             <h3 data-heading="5">
-                <a itemprop="url" data-link class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
+                <a itemprop="url" data-button="link" class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
             </h3>
         </header>
         <p>{{ entry.excerpt }}</p>
