--- a/src/pages/contribution/contribute-page.njk
+++ b/src/pages/contribution/contribute-page.njk
@@ -30,7 +30,7 @@ eleventyComputed:
             <label for="description">Description</label>
             <textarea rows="4" maxlength="500" type="text" id="description" name="description" required="true"></textarea>
             <small>Short description under 500 characters</small>
-            <button data-button="primary">Submit</button>
+            <button data-button="outline">Submit</button>
         </form>
     </div>
 </section>
