--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -22,7 +22,7 @@ eleventyComputed:
         <p data-heading="1">{{ hero_description or meta.site_description }}</p>
     </div>
 </section>
-<section id="findings" data-layout="stack slice" data-props="space:xs">
+<section id="findings" data-layout="stack slice" data-props="space:l">
     <h2 class="visually-hidden" data-heading="5">Browse by categories</h2>
     <nav class="categories-navigation">
         <ul role="list" data-layout="reel" data-props="noPad noBorder overflowing:noBar">
@@ -40,7 +40,7 @@ eleventyComputed:
     <h3 data-heading="5" class="visually-hidden">
         {{ "Newest" if currentCategory == 'All' else currentCategory }}
     </h3>
-    <ul class="story-cards" data-layout="grid" data-props="noPad space:s" role="list">
+    <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
         {% set entries = collections.stories | filterByCategory(currentCategory) | limitTo(4) %}
         {%- for entry in entries %}
             {% include "partials/story-card-entry.njk" %}
@@ -49,7 +49,7 @@ eleventyComputed:
     <span>
         {% set view_all_url = "findings" if currentCategory == "All" else "categories/"+currentCategory | slugify %}
         {% set see_more_button_text = "Explore all findings" if currentCategory == "All" else "Explore more findings about "+currentCategory %}
-        <a data-link href="/{{ view_all_url }}">
+        <a data-button="outline" href="/{{ view_all_url }}">
             {{ see_more_button_text }}
         </a>
     </span>
