--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,7 +1,7 @@
 <footer data-layout="switcher">
     <div class="padded-container" data-layout="switcher" data-props="y:start">
         <div data-layout="stack" data-props="x:start">
-            <h2 class="visually-hidden" data-heading="6">{{meta.site_name}}</h2>
+            <h2  data-heading="6">{{meta.site_name}}</h2>
             <small>Built by combining Eleventy and Notion.
             </small>
         </div>
