feat: 💄 add Google search engine & improve UI

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,8 +1,9 @@
-<header class="padded-container" data-heading="5" data-layout="cluster" data-props="y:center x:between">
+<header class="padded-container" data-layout="cluster" data-props="y:center x:between">
+
     <a data-link="noHover" href="/">
         {{ meta.site_name }}
     </a>
-    <nav>
+    {# <nav>
         <ul role="list" data-layout="cluster" data-props="space:s">
             {% for item in nav.items %}
                 <li>
@@ -12,5 +13,5 @@
                 </li>
             {% endfor %}
         </ul>
-    </nav>
+    </nav> #}
 </header>
