--- a/src/pages/manifest.njk
+++ b/src/pages/manifest.njk
@@ -48,7 +48,7 @@ eleventyExcludeFromCollections: true
     "Scope": "/",
     "display": "fullscreen",
     "theme_color": "{{meta.theme_color}}",
-    "background_color": "{{meta.primary_color}}",
+    "background_color": "{{meta.logo_backgroud_color}}",
     "orientation": "any",
     "description": "{{meta.site_description}}"
 }
