--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -25,7 +25,7 @@ eleventyComputed:
 <section id="findings" data-layout="stack slice" data-props="space:l">
     <h2 class="visually-hidden" data-heading="5">Browse by categories</h2>
     <nav class="categories-navigation">
-        <ul role="list" data-layout="reel" data-props="noPad noBorder overflowing:noBar">
+        <ul role="list" data-layout="cluster" data-props="noPad">
             {%- for category in collections.categoriesAndAll %}
                 {% set category_url = '' if category == 'All' else category | slugify %}
                 <li data-layout="stack" data-active="{{ 'true' if currentCategory == category else 'false' }}">
@@ -40,7 +40,7 @@ eleventyComputed:
     <h3 data-heading="5" class="visually-hidden">
         {{ "Newest" if currentCategory == 'All' else currentCategory }}
     </h3>
-    <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
+    <ul data-layout="stack" data-props="noPad" role="list">
         {% set entries = collections.stories | filterByCategory(currentCategory) | limitTo(4) %}
         {%- for entry in entries %}
             {% include "partials/story-card-entry.njk" %}
@@ -54,6 +54,7 @@ eleventyComputed:
         </a>
     </span>
 </section>
+{# <hr/> #}
 {# <section>
                 <button data-button="primary">Primary</button>
                 <button data-button="outline">Outline</button>
